KTL-1731: Added valkey access auth and removed executor policy